Add Matt's comments

--- a/paper.tex
+++ b/paper.tex
@@ -155,6 +155,7 @@ This ensures that future course staff will have the physical and technical means
 
 \section*{Implementation}
 % TODO: signposting
+\subsection*{Preliminary Choices}
 The first key decision in the implementation of these programming assignments was language selection.
 Many students suggested the assignments be implemented in Python,\footnote{per survey 1 results}, and this would be preferred by the course staff as well.
 Members of the Mechanism Design group are not expected to have working proficiency with Java, but many have enough experience with Python to support students.
@@ -450,6 +451,11 @@ As the goals of a project naturally define evaluation criteria, I have evaluated
 \end{itemize}
 
 %Thus, quantitative metrics, including software failure rates and instructor time usage, and qualitative metrics, including student and instructor satisfaction, both illustrate the improvements to the course and emphasize the importance of quality tooling to quality programming-based assignments.
+
+%What are your thoughts on how well the strategy design exercises have gone this year? Specifically, I'm interested in your satisfaction with the implementations and software, and the amount of instructor time and frustration spent. (And less intersted in comments on the course policy decisions that may have impacted how well they went, sicne that's not in the scope of my independent work.)
+%** significantly** improved instructor involvement.
+
+%I didn't actually touch any of the software directly, so I don't know how to comment on that. But I felt like the challenges mostly ran themselves. We talked briefly to set it up. We talked briefly to decide how to grade, and I didn't have to answer any technical questions for students in between
 
 \section*{Conclusions and Future Work}
 Through this work, my goal has been to improve the quality of present and future computer science theory education, from the perspectives of both the students and faculty associated with COS 445.
